--- a/GPU/readme
+++ b/GPU/readme
@@ -1,5 +1,4 @@
-MD Paralelo - versão 2
+MD Paralel - version 2
 
-- Sem Neighbour List
+- No Neighbour List
 - Dynamic Parallelism
-- TERMINAR E TESTAR E COMPARAR TEMPOS COM VERSÃO COM NL
