--- a/GPU/readme
+++ b/GPU/readme
@@ -1,4 +1,5 @@
-MD Paralel - version 2
+MD Paralelo - versão 2
 
-- No Neighbour List
+- Sem Neighbour List
 - Dynamic Parallelism
+- TERMINAR E TESTAR E COMPARAR TEMPOS COM VERSÃO COM NL
